--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <title>CryptoTrustandWill</title>
+  <meta name="description"
+    content="CryptoTrustandWill - Secure and reliable crypto trust and will management platform." />
+  <meta name="keywords"
+    content="crypto, trust, will, blockchain, inheritance, security, digital assets, estate planning" />
+  <meta property="og:title" content="CryptoTrustandWill" />
+  <meta property="og:description" content="Secure and reliable crypto trust and will management platform." />
+  <meta property="og:image" content="/hero_thumbnail.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="CryptoTrustandWill" />
+  <meta name="twitter:description" content="Secure and reliable crypto trust and will management platform." />
+  <meta name="twitter:image" content="/hero_thumbnail.jpg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/index.tsx"></script>
+</body>
+
 </html>
