--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="Secure and reliable crypto trust and will management platform." />
   <meta property="og:image" content="/hero_thumbnail.jpg" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:url" content="https://crypto-trustant-lp.vercel.app/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="CryptoTrustandWill" />
   <meta name="twitter:description" content="Secure and reliable crypto trust and will management platform." />
